feat: add graphql example

--- a/apps/nx-apollo/src/app/app.component.html
+++ b/apps/nx-apollo/src/app/app.component.html
@@ -1,8 +1,5 @@
-<div style="text-align:center">
-  <h1>Welcome to nx-apollo!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png"
-  />
+<h1>My Lego Sets</h1>
+<div class="flex">
+  <nx-apollo-example-set-form></nx-apollo-example-set-form>
+  <nx-apollo-example-set-list></nx-apollo-example-set-list>
 </div>
-<div>Message: {{ hello$ | async | json }}</div>
